--- a/school/IGME590/css/main.css
+++ b/school/IGME590/css/main.css
@@ -38,14 +38,17 @@ html {
     height: 100%;
 }
 
-.content {
+.content__container {
     display: flex;
-    justify-content: center;
     margin-top: 60px;
-    width: auto;
-    min-width: 250px;
     flex-direction: column;
     align-items: center;
+    width: auto;
+    min-width: 250px;
+
+}
+.content {
+    width: 65vw;
 }
 
 * {
@@ -63,6 +66,7 @@ html {
 
 .description {
     padding-top: 40px;
+    max-width: 520px;
 }
 
 .bt {
