--- a/projects/pulsating/css/style.css
+++ b/projects/pulsating/css/style.css
@@ -1,10 +1,73 @@
+@import url('https://fonts.googleapis.com/css?family=Oswald|Roboto');
 * {
-  margin:0;
-  padding:0;
+    margin: 0;
+    padding: 0;
 }
 
 body {
-  width:100%;
-  height:100%;
-  overflow:hidden;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.text {
+    height: 98vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #333;
+}
+
+h2 {
+    font-family: 'Myriad Pro', sans-serif;
+    font-size: 55px;
+}
+
+h6 {
+    font-family: 'Roboto', sans-serif;
+    font-size: 26px;
+}
+
+canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+.ball--fallBack {
+
+}
+
+#homepage {
+    width: 100vw;
+    height: 100vw;
+    overflow-x: auto;
+}
+
+.fluid-type14-26 {
+    font-size: 14px;
+}
+
+.fluid-type30-55 {
+    font-size: 29.6px;
+}
+
+@media screen and (min-width: 320px) {
+    .fluid-type14-26 {
+        font-size: calc( 14px + (26 - 14) * ( (100vw - 320px) / ( 1440 - 320)));
+    }
+    .fluid-type30-55 {
+        font-size: calc( 29.6px + (55 - 29.6) * ( (100vw - 320px) / ( 1440 - 320)));
+    }
+}
+
+@media screen and (min-width: 1440px) {
+    .fluid-type14-26 {
+        font-size: 26px;
+    }
+    .fluid-type30-55 {
+        font-size: 55px;
+    }
 }
