--- a/projects/pulsating/css/style.css
+++ b/projects/pulsating/css/style.css
@@ -18,7 +18,7 @@ body {
 }
 
 h2 {
-    font-family: 'Myriad Pro', sans-serif;
+    font-family: 'myriad-pro', sans-serif;
     font-size: 55px;
 }
 
