--- a/projects/pulsating/css/style.css
+++ b/projects/pulsating/css/style.css
@@ -23,7 +23,7 @@ h2 {
 }
 
 h6 {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'roboto', sans-serif;
     font-size: 26px;
 }
 
@@ -115,12 +115,19 @@ h3, p {
     font-size: 29.6px;
 }
 
+.fluid-type22-40 {
+    font-size: 22px;
+}
+
 @media screen and (min-width: 320px) {
     .fluid-type14-26 {
         font-size: calc( 14px + (26 - 14) * ( (100vw - 320px) / ( 1440 - 320)));
     }
     .fluid-type30-55 {
         font-size: calc( 29.6px + (55 - 29.6) * ( (100vw - 320px) / ( 1440 - 320)));
+    }
+    .fluid-type22-40 {
+        font-size: calc( 22px + (40 - 22) * ( (100vw - 320px) / ( 1440 - 320)));
     }
 }
 
@@ -130,5 +137,8 @@ h3, p {
     }
     .fluid-type30-55 {
         font-size: 55px;
+    }
+    .fluid-type22-40 {
+        font-size: 40px;
     }
 }
