--- a/css/style.css
+++ b/css/style.css
@@ -36,15 +36,17 @@ canvas {
     z-index: -1;
 }
 
-.ballGif{
+.ballGif {
     /*display: none;*/
     margin-top: 15vh;
 }
+
 .ballGif--img {
     /*width: calc(100% - 5vw);*/
     margin: auto;
     width: calc(220px + 10vw);
 }
+
 .progress {
     margin-top: 40vh;
     /*margin-left: 20vw;*/
@@ -55,9 +57,11 @@ canvas {
     z-index: 1000001;
     user-select: none;
 }
+
 .nav-left {
     left: 40px;
 }
+
 .nav-transform {
     z-index: 1000001;
     position: absolute;
@@ -68,9 +72,11 @@ canvas {
     transform-origin: 0 50%;
     top: 50%;
 }
+
 .nav-right {
     right: 40px;
 }
+
 .nav-transform-right {
     z-index: 1000001;
     position: absolute;
@@ -81,10 +87,12 @@ canvas {
     transform-origin: 100% 50%;
     top: 50%;
 }
+
 .nav-about-wrapper, .nav-mail-wrapper, .nav-works-wrapper {
     display: inline-block;
     padding: 10px;
 }
+
 .nav-about, .nav-mail, .nav-works {
     color: #333;
     opacity: .5;
@@ -93,21 +101,26 @@ canvas {
     -webkit-transition: opacity .3s;
     transition: opacity .3s;
 }
+
 .nav-about:hover, .nav-mail:hover, .nav-works:hover {
     opacity: 1;
 }
+
 .nav a {
     text-decoration: none!important;
     color: #333;
 }
+
 h3 {
     letter-spacing: 1.78px;
     font-size: 13px;
 }
+
 h3, p {
     font-family: Roboto;
     text-rendering: geometricPrecision;
 }
+
 .fluid-type14-26 {
     font-size: 14px;
 }
@@ -130,6 +143,30 @@ h3, p {
     }
     .fluid-type12-22 {
         font-size: calc( 10px + (20 - 10) * ( (100vw - 320px) / ( 1440 - 320)));
+    }
+}
+
+@media screen and (max-width: 1020px) {
+    #ball {
+        display: none;
+    }
+    #ball--fallBack {
+        display: block;
+    }
+    #homepage--background {
+        background-color: #f8f8f8;
+    }
+}
+
+@media screen and (min-width: 1020px) {
+    #ball {
+        display: block;
+    }
+    #ball--fallBack {
+        display: none;
+    }
+    #homepage--background {
+        background-color: none;
     }
 }
 
