--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
     overflow: hidden;
 }
 
-.text {
+.homepage__text {
     height: 98vh;
     display: flex;
     flex-direction: column;
@@ -17,14 +17,14 @@ body {
     color: #333;
 }
 
-h2 {
-    font-family: 'myriad-pro', sans-serif;
-    font-size: 55px;
+.myriad-pro-condensed {
+    font-family: myriad-pro-condensed, sans-serif;
+    font-style: normal;
+    font-weight: 700;
 }
 
-h6 {
+.roboto {
     font-family: 'roboto', sans-serif;
-    font-size: 26px;
 }
 
 canvas {
@@ -56,13 +56,15 @@ canvas {
 .nav {
     z-index: 1000001;
     user-select: none;
+    visibility: inherit;
+    opacity: 1;
 }
 
-.nav-left {
-    left: 87px;
+.nav--left {
+    left: 6vw;
 }
 
-.nav-transform {
+.nav--transform {
     z-index: 1000001;
     position: absolute;
     -webkit-transform: rotateZ(-90deg) translateX(-50%);
@@ -73,11 +75,11 @@ canvas {
     top: 50%;
 }
 
-.nav-right {
-    right: 87px;
+.nav--right {
+    right: 6vw;
 }
 
-.nav-transform-right {
+.nav--transformRight {
     z-index: 1000001;
     position: absolute;
     -webkit-transform: rotateZ(90deg) translateX(50%);
@@ -88,12 +90,12 @@ canvas {
     top: 50%;
 }
 
-.nav-about-wrapper, .nav-mail-wrapper, .nav-works-wrapper {
+.nav__about-wrapper, .nav__mail-wrapper, .nav__works-wrapper {
     display: inline-block;
     padding: 10px;
 }
 
-.nav-about, .nav-mail, .nav-works {
+.nav__about, .nav__mail, .nav__works {
     color: #333;
     opacity: .5;
     white-space: nowrap;
@@ -102,7 +104,7 @@ canvas {
     transition: opacity .3s;
 }
 
-.nav-about:hover, .nav-mail:hover, .nav-works:hover {
+.nav__about:hover, .nav__mail:hover, .nav__works:hover {
     opacity: 1;
 }
 
@@ -111,13 +113,12 @@ canvas {
     color: #333;
 }
 
-h3 {
+.nav__links {
     letter-spacing: 1.78px;
     font-size: 20px;
 }
 
 h3, p {
-    font-family: Roboto;
     text-rendering: geometricPrecision;
 }
 
@@ -145,6 +146,7 @@ h3, p {
         font-size: calc( 10px + (20 - 10) * ( (100vw - 320px) / ( 1440 - 320)));
     }
 }
+
 
 /*@media screen and (max-width: 1020px) {
     #ball {
