Myriad Pro condensed added

--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,12 @@ body {
     font-weight: 700;
 }
 
+.proxima-nova-alt-condensed {
+    font-family: "proxima-nova-alt-condensed", sans-serif;
+    font-style: normal;
+    font-weight: 700;
+}
+
 .roboto {
     font-family: 'roboto', sans-serif;
 }
