--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,10 @@ canvas {
     z-index: -1;
 }
 
+canvas {
+    width: 100vw !important;
+}
+
 .ballGif {
     /*display: none;*/
     margin-top: 15vh;
