--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body {
     width: 100%;
     height: 100%;
     overflow: hidden;
+    background-color: #f8f8f8;
 }
 
 .homepage__text {
@@ -108,9 +109,10 @@ canvas {
     transition: opacity .3s;
 }
 
-.link a {
+
+/*.link a {
     color: #333 !important;
-}
+}*/
 
 .link__decoration {
     text-decoration: none!important;
@@ -144,6 +146,9 @@ h3, p {
     align-items: center;
 }
 
+.bottom__link__name a {
+    color: #E53455;
+}
 
 .bottom__link__line__container {
     position: absolute;
@@ -159,7 +164,6 @@ h3, p {
     /*display: none; turn on when you move down on the page*/
     display: block;
 }
-
 
 .bottom__link__line {
     height: 115px;
