--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,7 @@ canvas {
 
 .bottom__link__line__container {
     position: absolute;
-    bottom: -28px;
+    bottom: -7vh;
     right: 0;
     height: calc(65px + 4vh);
     left: 50%;
