--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,9 @@ body {
 }
 
 .homepage__text {
-    height: 88vh;
+    /*height: 88vh;*/
     display: flex;
-    margin-top: 0vh;
+    margin-top: 12vh;
     flex-direction: column;
     align-items: center;
     color: #333;
@@ -108,8 +108,11 @@ canvas {
     -webkit-transition: opacity .3s;
     transition: opacity .3s;
 }
+.display--none {
+    display: none;
+}
 .pageUp__link {
-    display: flex;
+    /*display: flex;*/
     flex-direction: column;
     align-items: center;
     cursor: pointer;
