--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,9 @@ body {
 }
 
 .homepage__text {
-    /*height: 88vh;*/
+    height: 88vh;
     display: flex;
-    margin-top: 12vh;
+    margin-top: 0vh;
     flex-direction: column;
     align-items: center;
     color: #333;
@@ -108,11 +108,9 @@ canvas {
     -webkit-transition: opacity .3s;
     transition: opacity .3s;
 }
-.display--none {
-    display: none;
-}
+
 .pageUp__link {
-    /*display: flex;*/
+    display: flex;
     flex-direction: column;
     align-items: center;
     cursor: pointer;
@@ -140,19 +138,16 @@ canvas {
     margin-top: -3vh;
     cursor: default;
 }
-
 .bottom--disappear {
     opacity: 0;
-    -webkit-transition: opacity .2s;
-    transition: opacity .2s;
+    -webkit-transition: opacity .05s;
+    transition: opacity .05s;
 }
-
 .bottom--reappear {
     opacity: 1;
-    -webkit-transition: opacity 3s;
-    transition: opacity 3s;
+    -webkit-transition: opacity 2s;
+    transition: opacity 2s;
 }
-
 .bottom__link__name {
     display: flex;
     flex-direction: column;
@@ -208,11 +203,9 @@ canvas {
 .fluid-type30-60 {
     font-size: 29.6px;
 }
-
 .fluid-type24-44 {
     font-size: 24px;
 }
-
 .fluid-type12-16 {
     font-size: 12px;
 }
@@ -251,4 +244,3 @@ canvas {
     .fluid-type12-16 {
         font-size: 16px;
     }
-}
