--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,8 @@ body {
 }
 
 .homepage__text {
-    height: 88vh;
     display: flex;
-    margin-top: 0vh;
+    margin-top: 6vh;
     flex-direction: column;
     align-items: center;
     color: #333;
@@ -135,13 +134,17 @@ canvas {
 }
 
 .bottom__link {
-    margin-top: -3vh;
     cursor: default;
+    z-index: 1000000;
+    position: absolute;
+    bottom: 0px;
+    height: calc(55px + 4vh);
+    width: 100%;
 }
 .bottom--disappear {
     opacity: 0;
-    -webkit-transition: opacity .05s;
-    transition: opacity .05s;
+    -webkit-transition: opacity .5s;
+    transition: opacity .5s;
 }
 .bottom--reappear {
     opacity: 1;
@@ -163,9 +166,9 @@ canvas {
 
 .bottom__link__line__container {
     position: absolute;
-    bottom: -27px;
+    bottom: -10px;
     right: 0;
-    height: calc(65px + 4vh);
+    height: calc(55px + 4vh);
     left: 50%;
     -webkit-transform: translateX(-50%) scaleX(.5) scaleY(.5);
     -ms-transform: translateX(-50%) scaleX(.5) scaleY(.5);
@@ -177,7 +180,7 @@ canvas {
 }
 
 .bottom__link__line {
-    height: 10vh;
+    height: 12vh;
     width: 3px;
     left: 50%;
     display: block;
