--- a/css/page.css
+++ b/css/page.css
@@ -16,12 +16,14 @@
     cursor: pointer;
     margin-left: 6vw;*/
     /*height: 30.214286vw;*/
+    /*min-width: 299.25px;*/
+    /*min-height: 169.875px;*/
     width: 55.416667vw;
     border-radius: 3px;
     cursor: pointer;
     margin-left: 8.5vw;
     height: 31.458333vw;
-    margin-bottom: 56px;
+    margin-bottom: 03.888889vw;
 }
 
 .project__cover__content {
