--- a/css/style.css
+++ b/css/style.css
@@ -10,12 +10,20 @@ body {
     background-color: #f8f8f8;
 }
 
+#fullpage {
+    z-index: -2147483648;
+}
+
 .homepage__text {
     display: flex;
     margin-top: 6vh;
     flex-direction: column;
     align-items: center;
-    color: #333;
+}
+
+a {
+    color: inherit;
+    text-decoration: inherit;
 }
 
 .hompage__name {
