--- a/css/page.css
+++ b/css/page.css
@@ -11,13 +11,6 @@
 }
 
 .project__cover__image {
-    /*width: 53.428571vw;
-    border-radius: 3px;
-    cursor: pointer;
-    margin-left: 6vw;*/
-    /*height: 30.214286vw;*/
-    /*min-width: 299.25px;*/
-    /*min-height: 169.875px;*/
     width: 55.416667vw;
     border-radius: 3px;
     cursor: pointer;
@@ -31,5 +24,6 @@
     position: absolute;
     transform: translateY(-23%);
     left: 18vw;
+    top: 31vh;
     cursor: pointer;
 }
