--- a/css/page.css
+++ b/css/page.css
@@ -1,22 +1,26 @@
 .project__cover {
-    /*width: 100%;*/
-    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    /*min-height: 500px;*/
     justify-content: center;
     margin-bottom: 29vh;
-    /*height: 41.308594vh;*/
 }
 
 .project__cover__image {
     width: 55.416667vw;
+    object-fit: cover;
     border-radius: 3px;
     cursor: pointer;
     margin-left: 8.5vw;
-    height: 31.458333vw;
     margin-bottom: 03.888889vw;
+}
+
+.project__cover__image--vh {
+    height: 44.238281vh;
+}
+
+.project__cover__image--vw {
+    height: 31.458333vw;
 }
 
 .project__cover__content {
@@ -24,6 +28,7 @@
     position: absolute;
     transform: translateY(-23%);
     left: 18vw;
-    top: 31vh;
+    top: 30vh;
+    z-index: 20000000000000 !important;
     cursor: pointer;
 }
