--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@ body {
     background-color: #f8f8f8;
 }
 
+section {
+    position: absolute;
+}
+
 #fullpage {
 }
 
@@ -39,8 +43,17 @@ a {
     font-weight: 700;
 }
 
-.roboto {
+.roboto--regular {
     font-family: 'roboto', sans-serif;
+    font-weight: 400;
+}
+.roboto--medium {
+    font-family: 'roboto', sans-serif;
+    font-weight: 500;
+}
+.roboto--bold {
+    font-family: 'roboto', sans-serif;
+    font-weight: 700;
 }
 
 canvas {
@@ -272,4 +285,102 @@ canvas {
     .fluid-type24-100 {
         font-size: 100px;
     }
+}
+
+.col-1 {
+    width: 8.33333333%
+}
+
+.col-2 {
+    width: 16.66666667%
+}
+
+.col-3 {
+    width: 25%
+}
+
+.col-4 {
+    width: 33.33333333%
+}
+
+.col-5 {
+    width: 41.66666667%
+}
+
+.col-6 {
+    width: 50%
+}
+
+.col-7 {
+    width: 58.33333333%
+}
+
+.col-8 {
+    width: 66.66666667%
+}
+
+.col-9 {
+    width: 75%
+}
+
+.col-10 {
+    width: 83.33333333%
+}
+
+.col-11 {
+    width: 91.66666667%
+}
+
+.col-12 {
+    width: 100%
+}
+
+.offset-1 {
+  margin-left: 8.333333%;
+}
+
+.offset-2 {
+  margin-left: 16.666667%;
+}
+
+.offset-3 {
+  margin-left: 25%;
+}
+
+.offset-4 {
+  margin-left: 33.333333%;
+}
+
+.offset-5 {
+  margin-left: 41.666667%;
+}
+
+.offset-6 {
+  margin-left: 50%;
+}
+
+.offset-7 {
+  margin-left: 58.333333%;
+}
+
+.offset-8 {
+  margin-left: 66.666667%;
+}
+
+.offset-9 {
+  margin-left: 75%;
+}
+
+.offset-10 {
+  margin-left: 83.333333%;
+}
+
+.offset-11 {
+  margin-left: 91.666667%;
+}
+
+
+.column {
+    display: block;
+    float: left;
 }
