--- a/css/case.css
+++ b/css/case.css
@@ -16,15 +16,62 @@
 
 .link__name__color {
     color: #E53455;
-    background-color: #f8f8f8;
     z-index: 100000;
     cursor: pointer;
+}
+
+.case__hr {
+    width: 69vw;
+    margin-left: -4vw;
+    margin-bottom: 3.90625vw;
+}
+
+.case__description__hr--pushDown {
+    margin-bottom: 3.194444vw;
+}
+
+.case__info__hr--pushDown {
+    margin-bottom: 0vw;
+}
+
+@media screen and (max-width: 992px) {
+    .case__description__hr--pushDown {
+        margin-bottom: 0vw;
+    }
+    .case__info__hr--pushDown {
+        margin-bottom: 3.194444vw;
+    }
 }
 
 .case__info {
     text-align: left;
     background: #F8F8F8;
     color: #333;
+    margin-top: 20px;
+}
+
+.casestudy__image {
+    width: 63vw;
+    border-radius: 3px;
+}
+
+.casestudy__row {
+    margin-bottom: 6.25vw;
+}
+
+.casestudy__emptyBlock {
+    margin-bottom: 150px;
+}
+
+.casestudy__container {
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    transition: width .3s;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 64vw;
 }
 
 .case__info__container {
@@ -62,6 +109,10 @@
 
 .case__info p.first {
     padding-right: 5em;
+}
+
+.case__info p {
+    line-height: 1.8em;
 }
 
 .case__info a {
@@ -114,7 +165,6 @@
     width: 55.416667vw;
     object-fit: cover;
     border-radius: 3px;
-    cursor: pointer;
     margin-left: 2.5vw;
     margin-top: -70px;
     max-height: 570px;
@@ -124,7 +174,6 @@
     color: #333;
     margin-left: -22vw;
     z-index: 20000000000000 !important;
-    cursor: pointer;
     margin-top: -155px;
 }
 
