--- a/css/case.css
+++ b/css/case.css
@@ -35,7 +35,8 @@ body.fade-out {
 
 .case__hr {
     width: 69vw;
-    margin-left: -4vw;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 3.90625vw;
 }
 
