--- a/src/layouts/styles/global/_variables.scss
+++ b/src/layouts/styles/global/_variables.scss
@@ -3,4 +3,4 @@ $teal: #009C8E;
 $normal-grey: #BFBFBF;
 $light-grey: #E4E4E4;
 $dark-grey: #4D4D4D;
-$color-background: #F2F2F2;
+$color-background: #FFF;
